# eta-right-click

./: Makefile  README.md  meson.build  meson_options.txt
data/: eta-right-click.openrc  eta-right-click.systemd
debian/: changelog  control
include/: debug.h  epoch_time.h  evdev.h  event.h  input.h  socket.h  timeout.h
src/: blocker.c  client.c  epoch_time.c  evdev.c  event.c  input.c  main.c  server.c  socket-client.c  socket-server.c  socket_client.c  socket_server.c  timeout.c
